--- a/app/templates/formulario.html
+++ b/app/templates/formulario.html
@@ -8,9 +8,9 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   
-  <!-- Inclua o jQuery -->
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- Inclua o jQuery Mask Plugin -->
+  <!-- jQuery Mask Plugin -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
   
   <style>
@@ -463,6 +463,10 @@
         </div>
       `;
       document.getElementById("pessoas-container").appendChild(novaPessoa);
+
+	  // **Aplicação da máscara no novo campo CPF**
+     $(novaPessoa).find('.pessoa-cpf').mask('000.000.000-00', {reverse: true});	  
+	  
     }
   
     // Função para calcular a diferença de dias entre duas datas
