--- a/app/templates/agenciar.html
+++ b/app/templates/agenciar.html
@@ -72,9 +72,16 @@
           <label class="form-label">{{ form.data_termino.label }}</label>
           {{ form.data_termino(class="form-control") }}
         </div>
-        <div class="col-md-4">
-          {{ form.submit(class="btn btn-primary w-100") }}
-        </div>
+	  </div>
+	  <div class="row g-3 align-items-end mt-2">
+		<div class="col-md-4">
+		<label class="form-label">{{ form.data_criacao.label }}</label>
+		{{ form.data_criacao(class="form-control") }}
+		</div>
+		<div class="col-md-4"></div>
+		<div class="col-md-4">
+		{{ form.submit(class="btn btn-primary w-100") }}
+		</div>
       </div>
     </form>
 
